# crosspuck

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md
crates/crosspuck-app/: Cargo.toml  Info.plist
crates/crosspuck-app/Resources/: CrossPuck.icns
crates/crosspuck-app/scripts/: bundle-app.sh  generate-status-icon.sh  generate-status-icon.swift
crates/crosspuck-app/src/: bundle.rs  driver_install.rs  hid_backend.rs  logging.rs  main.rs  probe.rs  runtime.rs  settings.rs  user_activity.rs
crates/crosspuck-cli/: Cargo.toml
crates/crosspuck-cli/examples/: feature_probe.rs  triton_feedback.rs
crates/crosspuck-cli/src/: guest_driver.rs  haptic_loop.rs  main.rs
crates/crosspuck-core/: Cargo.toml
crates/crosspuck-core/src/: guest.rs  hid.rs  ipc.rs  lib.rs  state.rs
crates/crosspuck-core/src/guest_driver/: bridge.rs  config.rs  handles.rs  identity.rs  mod.rs  profile.rs  routing.rs  runtime.rs  trace.rs
crates/crosspuck-core/src/protocol/: codec.rs  frame.rs  mod.rs  payload.rs  queue.rs  status.rs
crates/crosspuck-core/src/transport/: mod.rs
crates/crosspuck-driver/: Cargo.toml  README.md
crates/crosspuck-driver/docs/: crossover-smoke-ko.md  crossover-smoke.md
crates/crosspuck-driver/src/: lib.rs
crates/crosspuck-driver/src/windows/: buffers.rs  dll.rs  errors.rs  handles.rs  hidd.rs  hidp.rs  hooks.rs  kernel32.rs  log.rs  mod.rs  proc.rs  real_hid.rs  sdl.rs  setupapi.rs  state.rs
docs/: index.html
examples/: feature_probe.rs
guest/hid_proxy/: Cargo.toml  README.md
guest/hid_proxy/examples/: mock_guest.rs
guest/hid_proxy/src/: host_bridge.rs  lib.rs  replay.rs
src/: main.rs
tools/: README.md  build-app.sh  build-dmg.sh  build-macos-hid-probe.sh  capture-feedback-scenarios.sh  install-driver.sh  launch-steam-with-probe.sh  profile-app-summary.sh  profile-app.sh  smoke-check.sh
tools/crossover/: install-driver.sh  smoke-check.sh
tools/crosspuck/: build-app.sh  install-driver.sh  smoke-check.sh
tools/macos_hid_probe/: README.md  build.sh  capture_feedback_scenarios.sh  host_hid_probe.c  launch_steam_with_probe.sh
