[workspace]
members = [
    "crates/crosspuck-core",
    "crates/crosspuck-cli",
    "crates/crosspuck-app",
    "crates/crosspuck-driver",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
crosspuck-core = { path = "crates/crosspuck-core" }
hidapi = { version = "2.6", features = ["macos-shared-device"] }
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
oslog = "0.2"
