[package]
name = "crosspuck-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared CrossPuck host HID, service state, and IPC primitives"

[dependencies]
hidapi = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["host-hid"]
host-hid = ["dep:hidapi", "dep:serde"]
