[package]
name = "crosspuck-hid-proxy"
version = "0.1.0"
edition = "2021"
description = "CrossOver guest hid.dll proxy PoC that replays captured Steam Controller HID reports"
license = "MIT"

[lib]
name = "hid"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
min_hook_rs = "2.2"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
] }
